2010-09-29  Miloš Popović  <gpopac@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        Serbian translations update.

        * sr.po:
        * sr@latin.po:

2010-09-29  Reinout van Schouwen  <reinouts@gnome.org>

        Reviewed by Gustavo Noronha.

        [GTK] Updated Dutch translation
        https://bugs.webkit.org/show_bug.cgi?id=46050

        * nl.po:

2010-08-31  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r66519.
        http://trac.webkit.org/changeset/66519
        https://bugs.webkit.org/show_bug.cgi?id=44973

        Broke GTK+. (Requested by kov on #webkit).

        * cs.po:
        * de.po:
        * en_GB.po:
        * es.po:
        * et.po:
        * gl.po:
        * gu.po:
        * he.po:
        * it.po:
        * lt.po:
        * lv.po:
        * nb.po:
        * nl.po:
        * pa.po:
        * pt.po:
        * pt_BR.po:
        * ru.po:
        * sl.po:
        * sr.po:
        * sr@latin.po:
        * sv.po:
        * uk.po:
        * vi.po:
        * zh_CN.po:

2010-08-31  Gustavo Noronha Silva  <gns@gnome.org>

        Refreshed all po files with the latest potfile.

        * cs.po:
        * de.po:
        * en_GB.po:
        * es.po:
        * et.po:
        * gl.po:
        * gu.po:
        * he.po:
        * it.po:
        * lt.po:
        * lv.po:
        * nb.po:
        * nl.po:
        * pa.po:
        * pt.po:
        * pt_BR.po:
        * ru.po:
        * sl.po:
        * sr.po:
        * sr@latin.po:
        * sv.po:
        * uk.po:
        * vi.po:
        * zh_CN.po:

2010-08-31  Jorge González  <aloriel@gmail.com>

        Reviewed by Gustavo Noronha.

        [GTK] Spanish translation for trunk
        https://bugs.webkit.org/show_bug.cgi?id=44395

        * es.po: Updated.

2010-08-31  Kjartan Maraas  <kmaraas@gnome.org>

        Reviewed by Gustavo Noronha Silva.

        WebKitGTK+ translation needed
        https://bugzilla.gnome.org/show_bug.cgi?id=610099
